--- a/lib/multi_layout_web/components/layouts/admin.html.heex
+++ b/lib/multi_layout_web/components/layouts/admin.html.heex
@@ -5,7 +5,7 @@
         <img src={~p"/images/logo.svg"} width="36" />
       </a>
       <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        App Layout v<%= Application.spec(:phoenix, :vsn) %>
+        Admin Layout v<%= Application.spec(:phoenix, :vsn) %>
       </p>
     </div>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
